[gd_scene load_steps=7 format=3 uid="uid://bl5qftss5pkna"]

[ext_resource type="Script" path="res://Server/Game/Units/Player1/Scripts/WorkerUnit_1.gd" id="1_ij87c"]
[ext_resource type="Texture2D" uid="uid://k8g00nptdicw" path="res://icon.svg" id="2_jwpig"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v8gtr"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pnhur"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xpuhk"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rlxfr"]

[node name="WorkerUnit_1" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent")]
collision_layer = 2
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 5.0
script = ExtResource("1_ij87c")
nav_agent = NodePath("Navigation/NavigationAgent2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.913725, 0, 1, 1)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_jwpig")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v8gtr")
metadata/_edit_lock_ = true

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
avoidance_enabled = true

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pnhur")
metadata/_edit_lock_ = true

[node name="connectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="connectionZone"]
shape = SubResource("CircleShape2D_xpuhk")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_rlxfr")

[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="body_entered" from="connectionZone" to="." method="_on_connection_zone_body_entered"]
[connection signal="body_exited" from="connectionZone" to="." method="_on_connection_zone_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
